--- a/src/App.css
+++ b/src/App.css
@@ -3,25 +3,25 @@
   margin: 0 auto;
   font-family: Arial, Helvetica, sans-serif;
   color: white;
+  height: 100%;
 }
 
 .Clock {
-  height: 200px;
+  height: 100px;
   background: linear-gradient(grey, black);
 }
 
 .Clock p {
   position: relative;
-  top: 90px;
+  top: 40px;
   
 }
 
 .Count {
-  height: 300px;
+  height: 800px;
   background: url('./images/gummy\ bears.jpg');
   background-size: cover;
   padding-top: 70px;
-
 }
 
 .gray-box{
@@ -29,7 +29,7 @@
   left: 33%;
   padding: 10px 10px 0 10px;
   background-color: rgba(0, 0, 0, 0.8);
-  height: 240px;
+  height: 260px;
   width: 34%;
   border-radius: 35px;
 }
